--- a/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
+++ b/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div [style.backgroundColor]="mainTextColor" class="line flex h-[1px] w-full opacity-50"></div>
+    <div [style.backgroundColor]="mainTextColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
 
 
     <div class="main-body flex flex-col gap-6">
