--- a/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
+++ b/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
@@ -23,108 +23,94 @@
     <div [style.backgroundColor]="mainTextColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
 
 
-    <div class="main-body flex flex-col gap-6">
+    <div class="main-body w-full flex flex-col gap-6">
 
-        <div class="experience-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Experience</span>
+        <div class="profile-section w-full flex flex-col items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm">Profile</span>
+
+            <span class="text-[10px] RM-Medium text-black">As a dedicated frontend developer, I possess a strong passion for crafting compelling and seamlessly functional user experiences.</span>
+        </div>
+
+        <div class="skills-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Skills</span>
+
+            <div class="text-[10px] RM-Medium grid grid-cols-3 gap-x-1 gap-y-1 text-black w-[70%]">
+                <span class="">TypeScript</span>
+                <span class="">Angular</span>
+                <span class="">React.js</span>
+                <span class="">HTML5</span>
+                <span class="">CSS/SCSS</span>
+                <span class="">TailwindCSS</span>
+                <span class="">Node.JS</span>
+                <span class="">NextJS</span>
+                <span class="">TypeScript</span>
+
+
             </div>
-
-            <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">ABC Company</span>
-                        <span class="SG-Regular flex-shrink-0 text-xs">Frontend Developer</span>
-                    </div>
-
-                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
-
-                </div>
-
-                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Conducted user research and analyzed data to identify design opportunities and inform design decisions</li>
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Collaborated with cross-functional teams to create wireframes, prototypes, and high-fidelity mockups</li>
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Facilitated design reviews and user testing sessions to gather feedback and improve design solutions</li>
-                </div>
-            </div>
-
         </div>
 
 
-        <div class="education-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Education</span>
-            </div>
+        <div class="experience-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Experience</span>
 
             <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">School of Design</span>
-                        <span class="SG-Regular flex-shrink-0 text-xs">UX Design Bootcamp</span>
+                <div class="top-right flex flex-col items-start justify-between">
+                    <div class="header flex flex-row-reverse items-center gap-1 flex-shrink-0">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Apple Inc.</span>
+                        <span [style.backgroundColor]="mainTextColor"
+                            class="line w-[1px] h-3 bg-[#6F7588]"></span>
+                        <span [style.color]="mainTextColor" class="RC-Medium flex-shrink-0 text-xs">Frontend Developer</span>
                     </div>
 
-                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
+                    <div class="flex flex-row items-center gap-1 flex-shrink-0">
+                        <span class="Roboto-Medium text-[10px] text-[#9FA3AE]">San Francisco, CA</span>
+                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
+                        <span class="Roboto-Medium flex-shrink-0 text-[10px] text-[#9FA3AE]">Internship</span>
+                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Aug 2023</span>
+                    </div>
 
                 </div>
 
-                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Intensive, full-time program that provided hands-on training in user-centered design, prototyping, and visual design</li>
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Completed several design projects, including designing a mobile app for mental health, a website for a local non-profit, and an e-commerce platform for a start-up</li>
+                <div class="bottom-right text-[#6F7588] list-none relative flex flex-col items-start gap-1">
+                    <span class="Roboto-Regular text-[10px]">During this time, I gained;</span>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Conducted user research and analyzed data to identify design opportunities and inform design decisions</li>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Collaborated with cross-functional teams to create wireframes, prototypes, and high-fidelity mockups</li>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Facilitated design reviews and user testing sessions to gather feedback and improve design solutions</li>
                 </div>
             </div>
-
         </div>
 
-        <div class="education-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Education</span>
-            </div>
+        <div class="education-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
 
             <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">XYZ Project</span>
-                        <span class="SG-Regular flex-shrink-0 text-xs">Freelance Designer</span>
-                    </div>
+                <div class="top-right flex flex-col items-start justify-between">
+                    <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
 
-                    <span class="SG-Regular flex-shrink-0 text-xs">Jan 2023 - Present</span>
+                    <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
 
-                </div>
-
-                <div class="bottom-right list-none relative flex flex-col items-start gap-1">
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Designed wireframes, prototypes, and visual designs for mobile and web-based products</li>
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Conducted usability testing and iterated on design solutions based on user feedback</li>
-                    <li class="SG-Regular pl-3 flex-shrink-0 text-xs text-left">Collaborated with developers  to ensure that designs were accurately implemented and met accessibility standards</li>
+                    <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
 
                 </div>
             </div>
-
         </div>
 
-        <div class="education-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold text-sm">Skills & Tools</span>
-            </div>
+        <div class="education-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
 
             <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-wrap">
-                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">Skills</span>
-                        <span class="SG-Regular flex-shrink-0 text-xs">User Research, Interaction Design, Visual Design, Communication and Collaboration, User Testing, Adaptability, Continuous Learning</span>
-                    </div>
+                <div class="top-right flex flex-col items-start justify-between">
+                    <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
 
-                </div>
+                    <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
 
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-wrap">
-                        <span [style.color]="mainTextColor" class="SG-Bold text-sm">Tools</span>
-                        <span class="SG-Regular flex-shrink-0 text-xs">Sketch, Figma, Figjam  , Adobe Creative Suite  , InVision, Axure, Marvel App, Balsamiq, Webflow, UserTesting</span>
-                    </div>
+                    <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
 
                 </div>
             </div>
-
         </div>
+
 
     </div>
 </section>
