fixed editor layout and initialized form creation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
+<!-- <section class="main-container w-full h-screen relative flex flex-col overflow-hidden">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</section> -->
+
 <router-outlet></router-outlet>
