--- a/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
+++ b/src/app/components/preview-templates/template-three-preview/template-three-preview.component.html
@@ -84,32 +84,93 @@
         <div class="education-section w-full flex flex-row items-start gap-1">
             <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
 
-            <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex flex-col items-start justify-between">
-                    <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
-
-                    <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
-
-                    <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
-
+            <div class="flex flex-col w-[70%] gap-6">
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
+    
+                    </div>
+                </div>
+    
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
+    
+                    </div>
                 </div>
             </div>
+
+            
         </div>
 
         <div class="education-section w-full flex flex-row items-start gap-1">
             <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
 
-            <div class="right w-[70%] flex flex-col gap-4">
-                <div class="top-right flex flex-col items-start justify-between">
-                    <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
-
-                    <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
-
-                    <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
-
+            <div class="flex flex-col w-[70%] gap-6">
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
+    
+                    </div>
+                </div>
+    
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
+    
+                    </div>
                 </div>
             </div>
+
+            
         </div>
+
+        <div class="education-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
+
+            <div class="flex flex-col w-[70%] gap-6">
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
+    
+                    </div>
+                </div>
+    
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
+    
+                    </div>
+                </div>
+            </div>
+
+            
+        </div>
+
 
 
     </div>
