--- a/src/app/components/preview-templates/template-three-preview/template-three-preview.component.scss
+++ b/src/app/components/preview-templates/template-three-preview/template-three-preview.component.scss
@@ -5,3 +5,7 @@ li::before {
     position: absolute; /* Positioning the bullet point */
     left: -2.5px; /* Adjusting the position to align it outside of the text space */
   }
+
+  .main-container{
+    box-shadow: 0px 6.4px 8.54px -2.13px rgba(16,24,40,0.08), 0px 2.13px 3.2px -1.07px rgba(16,24,40,0.03);
+}
