--- a/src/assets/templates/template-one/template-one.component.html
+++ b/src/assets/templates/template-one/template-one.component.html
@@ -1,57 +1,117 @@
-<section class="main-container w-full h-full p-6 flex flex-col gap-8">
+<section class="main-container print_area w-full h-fit p-6 flex flex-col gap-8">
     <div class="header flex items-end justify-between">
-        <div class="left flex flex-col items-start">
-            <span [style.color]="mainTextColor" class="SG-Bold text-2xl">Daniel Glover</span>
-            <span class="SG-Regular subtxt">Frontend Developer</span>
+
+        <div class="left flex items-center gap-2">
+            <div [style.backgroundImage]="'url(' + selectedImageUrl + ')'" [style.backgroundColor]="mainTextColor" class="w-9 h-9 rounded-full bg-cover bg-center bg-no-repeat">
+                
+            </div>
+
+            <div class="flex flex-col items-start">
+                <span [style.color]="mainTextColor" class="RC-Bold uppercase text-xl">{{formData.firstname}} {{formData.lastname}}</span>
+                <span class="RM-Medium text-[#6F7588] subtxt uppercase text-sm">{{formData.jobTitle}}</span>
+            </div>
         </div>
+        
 
         <div class="right flex flex-col items-end">
-            <a href="#" class="SG-Medium underline subtxt">danielglover.design</a>
-            <a href="#" class="SG-Medium underline subtxt">iamglover0&commat;gmail.com</a>
-            <span class="SG-Medium subtxt">055 830 8631</span>
+            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">danielglover.design</a>
+            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.email}}</a>
+            <span class="RM-Regular subtxt text-[#646C86] text-[10px]">{{formData.phone}}</span>
         </div>
     </div>
 
+    <div [style.backgroundColor]="mainTextColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
 
-    <div class="main-body flex flex-col gap-6">
 
-        <div class="experience-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold">Experience</span>
-            </div>
+    <div class="main-body w-full flex flex-col gap-6">
 
-            <div class="right w-[70%] flex flex-col gap-9">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="SG-Bold">ABC Company</span>
-                        <span class="SG-Regular flex-shrink-0">Frontend Developer</span>
-                    </div>
+        <div class="profile-section w-full flex flex-col items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm">Profile</span>
 
-                    <span class="SG-Regular flex-shrink-0">Jan 2023 - Present</span>
-
-                </div>
-            </div>
-
+            <span class="text-[10px] RM-Medium text-black">As a dedicated frontend developer, I possess a strong passion for crafting compelling and seamlessly functional user experiences.</span>
         </div>
 
+        <div class="skills-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Skills</span>
 
-        <div class="experience-section flex items-start justify-between">
-            <div class="left w-[30%]">
-                <span [style.color]="mainTextColor" class="SG-Bold flex-shrink-0">Experience</span>
+            <div class="text-[10px] RM-Medium grid grid-cols-3 gap-x-1 gap-y-1 text-black w-[70%]">
+                <span class="">TypeScript</span>
+                <span class="">Angular</span>
+                <span class="">React.js</span>
+                <span class="">HTML5</span>
+                <span class="">CSS/SCSS</span>
+                <span class="">TailwindCSS</span>
+                <span class="">Node.JS</span>
+                <span class="">NextJS</span>
+                <span class="">TypeScript</span>
+
+
             </div>
+        </div>
 
-            <div class="right w-[70%] flex flex-col gap-3">
-                <div class="top-right flex items-start justify-between">
-                    <div class="header flex flex-col items-start flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="SG-Bold">ABC Company</span>
-                        <span class="SG-Regular flex-shrink-0">Frontend Developer</span>
+        <div class="experience-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Experience</span>
+
+            <div class="right w-[70%] flex flex-col gap-4">
+                <div class="top-right flex flex-col items-start justify-between">
+                    <div class="header flex flex-row-reverse items-center gap-1 flex-shrink-0">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Apple Inc.</span>
+                        <span [style.backgroundColor]="mainTextColor"
+                            class="line w-[1px] h-3 bg-[#6F7588]"></span>
+                        <span [style.color]="mainTextColor" class="RC-Medium flex-shrink-0 text-xs">Frontend Developer</span>
                     </div>
 
-                    <span class="SG-Regular flex-shrink-0">Jan 2023 - Present</span>
+                    <div class="flex flex-row items-center gap-1 flex-shrink-0">
+                        <span class="Roboto-Medium text-[10px] text-[#9FA3AE]">San Francisco, CA</span>
+                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
+                        <span class="Roboto-Medium flex-shrink-0 text-[10px] text-[#9FA3AE]">Internship</span>
+                        <span class="line w-[1px] h-3 bg-[#9FA3AE]"></span>
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Aug 2023</span>
+                    </div>
 
                 </div>
+
+                <div class="bottom-right text-[#6F7588] list-none relative flex flex-col items-start gap-1">
+                    <span class="Roboto-Regular text-[10px]">During this time, I gained;</span>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Conducted user research and analyzed data to identify design opportunities and inform design decisions</li>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Collaborated with cross-functional teams to create wireframes, prototypes, and high-fidelity mockups</li>
+                    <li class="Roboto-Regular pl-3 flex-shrink-0 text-[10px] text-left">Facilitated design reviews and user testing sessions to gather feedback and improve design solutions</li>
+                </div>
+            </div>
+        </div>
+
+        <div class="education-section w-full flex flex-row items-start gap-1">
+            <span class="RC-Medium uppercase text-[#6C6C6C] text-sm w-[30%]">Education</span>
+
+            <div class="flex flex-col w-[70%] gap-6">
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Aug 2022 - Present</span>
+    
+                    </div>
+                </div>
+    
+                <div class="right w-full flex flex-col gap-4">
+                    <div class="top-right flex flex-col items-start justify-between">
+                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
+    
+                        <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
+    
+                        <span class="Roboto-Medium flex-shrink-0 text-[#9FA3AE] text-[10px]">Sep 2018 - October 2021</span>
+    
+                    </div>
+                </div>
+
+                
             </div>
 
+            
+
+            
         </div>
 
     </div>
