--- a/src/assets/templates/template-one/template-one.component.html
+++ b/src/assets/templates/template-one/template-one.component.html
@@ -2,25 +2,34 @@
     <div class="header flex items-end justify-between">
 
         <div class="left flex items-center gap-2">
-            <div [style.backgroundImage]="'url(' + selectedImageUrl + ')'" [style.backgroundColor]="mainTextColor" class="w-9 h-9 rounded-full bg-cover bg-center bg-no-repeat">
+            <div [style.backgroundImage]="'url(' + selectedImageUrl + ')'" [style.backgroundColor]="textColor" class="w-9 h-9 rounded-full bg-cover bg-center bg-no-repeat">
                 
             </div>
 
             <div class="flex flex-col items-start">
-                <span [style.color]="mainTextColor" class="RC-Bold uppercase text-xl">{{formData.firstname}} {{formData.lastname}}</span>
+                <span [style.color]="textColor" class="RC-Bold uppercase text-xl">{{formData.firstname}} {{formData.lastname}}</span>
                 <span class="RM-Medium text-[#6F7588] subtxt uppercase text-sm">{{formData.jobTitle}}</span>
             </div>
         </div>
         
 
         <div class="right flex flex-col items-end">
-            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">danielglover.design</a>
-            <a href="#" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.email}}</a>
+            <a href="{{formData.website}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.website}}</a>
+
+            @if (formData.linkedIn) {
+                <a href="{{formData.linkedIn}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">linkedin.com</a>
+            }
+
+            @if (formData.github) {
+                <a href="{{formData.github}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">github.com</a>
+            }
+
+            <a href="{{formData.email}}" class="RM-Regular text-[#646C86] underline subtxt text-[10px]">{{formData.email}}</a>
             <span class="RM-Regular subtxt text-[#646C86] text-[10px]">{{formData.phone}}</span>
         </div>
     </div>
 
-    <div [style.backgroundColor]="mainTextColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
+    <div [style.backgroundColor]="textColor" class="line flex h-[0.5px] w-full p-[0.5px] opacity-50"></div>
 
 
     <div class="main-body w-full flex flex-col gap-6">
@@ -55,10 +64,10 @@
             <div class="right w-[70%] flex flex-col gap-4">
                 <div class="top-right flex flex-col items-start justify-between">
                     <div class="header flex flex-row-reverse items-center gap-1 flex-shrink-0">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Apple Inc.</span>
-                        <span [style.backgroundColor]="mainTextColor"
+                        <span [style.color]="textColor" class="RC-Medium text-sm">Apple Inc.</span>
+                        <span [style.backgroundColor]="textColor"
                             class="line w-[1px] h-3 bg-[#6F7588]"></span>
-                        <span [style.color]="mainTextColor" class="RC-Medium flex-shrink-0 text-xs">Frontend Developer</span>
+                        <span [style.color]="textColor" class="RC-Medium flex-shrink-0 text-xs">Frontend Developer</span>
                     </div>
 
                     <div class="flex flex-row items-center gap-1 flex-shrink-0">
@@ -86,7 +95,7 @@
             <div class="flex flex-col w-[70%] gap-6">
                 <div class="right w-full flex flex-col gap-4">
                     <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
+                        <span [style.color]="textColor" class="RC-Medium text-sm">Intercom Programming and Manufacturing Company (IPMC)</span>
     
                         <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">Advanced Diploma, Software Engineering</span>
     
@@ -97,7 +106,7 @@
     
                 <div class="right w-full flex flex-col gap-4">
                     <div class="top-right flex flex-col items-start justify-between">
-                        <span [style.color]="mainTextColor" class="RC-Medium text-sm">Mfantsipim School</span>
+                        <span [style.color]="textColor" class="RC-Medium text-sm">Mfantsipim School</span>
     
                         <span class="Roboto-Medium text-[10px] text-[#4E4E4E]">West African Senior School Certificate Examination, General Science</span>
     
